--- a/Example/en.lproj/MainStoryboard.storyboard
+++ b/Example/en.lproj/MainStoryboard.storyboard
@@ -1,23 +1,61 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2519" systemVersion="12A206j" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2844" systemVersion="12C2034" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1856"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1930"/>
     </dependencies>
     <scenes>
-        <!--class Prefix:identifier View Controller-->
+        <!--View Controller-->
         <scene sceneID="4">
             <objects>
                 <viewController id="2" customClass="ViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5">
                         <rect key="frame" x="0.0" y="20" width="768" height="1004"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MIU-Ps-PDi">
+                                <items>
+                                    <barButtonItem title="Refresh" id="9wu-N2-vww"/>
+                                </items>
+                            </toolbar>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="csj-xu-sBt">
+                                <connections>
+                                    <outlet property="delegate" destination="2" id="1RT-dl-dBk"/>
+                                </connections>
+                            </mapView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="MIU-Ps-PDi" firstAttribute="top" secondItem="csj-xu-sBt" secondAttribute="bottom" type="default" id="6qJ-b2-9Gn"/>
+                            <constraint firstItem="csj-xu-sBt" firstAttribute="top" secondItem="5" secondAttribute="top" type="default" id="Erl-zw-GHv"/>
+                            <constraint firstItem="MIU-Ps-PDi" firstAttribute="bottom" secondItem="5" secondAttribute="bottom" type="default" id="IiF-6Q-2t4"/>
+                            <constraint firstItem="MIU-Ps-PDi" firstAttribute="trailing" secondItem="5" secondAttribute="trailing" type="default" id="LsL-ko-Mdr"/>
+                            <constraint firstItem="csj-xu-sBt" firstAttribute="leading" secondItem="5" secondAttribute="leading" type="default" id="Vg8-06-FgS"/>
+                            <constraint firstItem="csj-xu-sBt" firstAttribute="trailing" secondItem="5" secondAttribute="trailing" type="default" id="ifX-23-AdH"/>
+                            <constraint firstItem="MIU-Ps-PDi" firstAttribute="leading" secondItem="5" secondAttribute="leading" type="default" id="wg7-vj-6fi"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="mapView" destination="csj-xu-sBt" id="ckO-8D-tN7"/>
+                        <outlet property="mapview" destination="5" id="GH8-6s-6Ds"/>
+                        <outlet property="refreshButton" destination="9wu-N2-vww" id="lyS-qH-q2b"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3" sceneMemberID="firstResponder"/>
             </objects>
         </scene>
     </scenes>
+    <classes>
+        <class className="NSLayoutConstraint" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        </class>
+        <class className="ViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="mapView" candidateClass="MKMapView"/>
+                <relationship kind="outlet" name="refreshButton" candidateClass="UIBarButtonItem"/>
+            </relationships>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar" statusBarStyle="blackTranslucent"/>
         <simulatedOrientationMetrics key="orientation"/>
